deploy: a025212aa4d5b67990a9ee5d3b3f9846c9e7869c

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.oUq-Mv_6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CSsq1ubF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BvLojk_z.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Co_nB3Rs.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.DJpbLVzb.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.1dlutGXH.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CS2woezj.js">
+		<link href="./_app/immutable/assets/2.CP8CqdL7.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BsV14ZWI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DNjibApL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ai0Xrpo1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app._mUVuGDQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.P45Cyos2.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dx0BLw5e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.1uaJs0Eh.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<!-- App content -->
-		<div style="display: contents">  <h1 data-svelte-h="svelte-yyjjjs">Welcome to SvelteKit</h1> <p data-svelte-h="svelte-jl9sbz">Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p> 
+		<div style="display: contents">   <div><label for="name" data-svelte-h="svelte-13owtj4">Value:</label> <input id="name" placeholder="Enter some text" value=""></div>  <div class="row svelte-149llbr"><input placeholder="Enter save name" value=""> <button class="svelte-149llbr" data-svelte-h="svelte-bekamz">Save</button> <select><option value="" disabled selected data-svelte-h="svelte-10p28m">Saved entries</option></select> <button disabled class="svelte-149llbr">Load</button> <button disabled class="svelte-149llbr">Delete</button></div> 
 			
 			<script>
 				{
-					__sveltekit_12z9s3f = {
+					__sveltekit_1rco4pq = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -28,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.oUq-Mv_6.js"),
-						import("./_app/immutable/entry/app.Co_nB3Rs.js")
+						import("./_app/immutable/entry/start.BsV14ZWI.js"),
+						import("./_app/immutable/entry/app._mUVuGDQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
