--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.CP8CqdL7.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BsV14ZWI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DNjibApL.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Cm-r6-GU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BBJ6wrCc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ai0Xrpo1.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app._mUVuGDQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CMhmB90D.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.P45Cyos2.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dx0BLw5e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.1uaJs0Eh.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cksd3ANJ.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<!-- App content -->
-		<div style="display: contents">   <div><label for="name" data-svelte-h="svelte-13owtj4">Value:</label> <input id="name" placeholder="Enter some text" value=""></div>  <div class="row svelte-149llbr"><input placeholder="Enter save name" value=""> <button class="svelte-149llbr" data-svelte-h="svelte-bekamz">Save</button> <select><option value="" disabled selected data-svelte-h="svelte-10p28m">Saved entries</option></select> <button disabled class="svelte-149llbr">Load</button> <button disabled class="svelte-149llbr">Delete</button></div> 
+		<div style="display: contents">  <div><label for="name" data-svelte-h="svelte-13owtj4">Value:</label> <input id="name" placeholder="Enter some text" value=""></div>  <div class="row svelte-149llbr"><input placeholder="Enter save name" value=""> <button class="svelte-149llbr" data-svelte-h="svelte-bekamz">Save</button> <select><option value="" disabled selected data-svelte-h="svelte-10p28m">Saved entries</option></select> <button disabled class="svelte-149llbr">Load</button> <button disabled class="svelte-149llbr">Delete</button></div> 
 			
 			<script>
 				{
-					__sveltekit_1rco4pq = {
+					__sveltekit_p6w4qj = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +29,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BsV14ZWI.js"),
-						import("./_app/immutable/entry/app._mUVuGDQ.js")
+						import("./_app/immutable/entry/start.Cm-r6-GU.js"),
+						import("./_app/immutable/entry/app.CMhmB90D.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
