--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/2.CP8CqdL7.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Cm-r6-GU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BBJ6wrCc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ai0Xrpo1.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CMhmB90D.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.P45Cyos2.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dx0BLw5e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.Cksd3ANJ.js">
+		<link href="./_app/immutable/assets/2.quDYE5j9.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BCElBdc0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D9Nq7kw6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.D8zZSyqD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.I66BSs2o.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DII8k8wZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BOlsE0VD.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BqWNymFP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DGS8nGRJ.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<!-- App content -->
-		<div style="display: contents">  <div><label for="name" data-svelte-h="svelte-13owtj4">Value:</label> <input id="name" placeholder="Enter some text" value=""></div>  <div class="row svelte-149llbr"><input placeholder="Enter save name" value=""> <button class="svelte-149llbr" data-svelte-h="svelte-bekamz">Save</button> <select><option value="" disabled selected data-svelte-h="svelte-10p28m">Saved entries</option></select> <button disabled class="svelte-149llbr">Load</button> <button disabled class="svelte-149llbr">Delete</button></div> 
+		<div style="display: contents">   <div class="container svelte-zuz44l"><input class="entry svelte-zuz44l" type="text" placeholder="Enter a name" value=""> <button class="svelte-zuz44l" data-svelte-h="svelte-1hpsbso">Add Participant</button> <div class="list svelte-zuz44l"></div></div> <div class="container svelte-ouypoh"><select class="svelte-ouypoh"><option disabled selected class="svelte-ouypoh" data-svelte-h="svelte-1m33biw">Select a name</option></select> <select class="svelte-ouypoh"><option disabled selected class="svelte-ouypoh" data-svelte-h="svelte-1m33biw">Select a name</option></select> <button disabled class="svelte-ouypoh">Add Pair</button> <ul class="pair-list svelte-ouypoh"></ul></div> <div class="container svelte-10l3a7n"><button class="styled-button svelte-10l3a7n" data-svelte-h="svelte-sypuq5">Generate assignment</button> </div> <div class="container svelte-1e8p8iz"><a target="_blank" class="link-button encode-button svelte-1e8p8iz" href="http://unknown/?startwith=eyJuYW1lcyI6W10sInNlbGVjdGlvbiI6W10sInBhaXJzIjpbXSwiaGlzdG9yeSI6W119">Current setup</a> </div> 
 			
 			<script>
 				{
-					__sveltekit_p6w4qj = {
+					__sveltekit_pxslrv = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -29,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Cm-r6-GU.js"),
-						import("./_app/immutable/entry/app.CMhmB90D.js")
+						import("./_app/immutable/entry/start.BCElBdc0.js"),
+						import("./_app/immutable/entry/app.DII8k8wZ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
