--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.quDYE5j9.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BCElBdc0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D9Nq7kw6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Dz0IGEI8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.qlGGjaRB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.D8zZSyqD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.I66BSs2o.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DII8k8wZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.fI-QWyJX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BOlsE0VD.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BqWNymFP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DGS8nGRJ.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CV6KsfrR.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<!-- App content -->
@@ -21,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_pxslrv = {
+					__sveltekit_bw0qsy = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BCElBdc0.js"),
-						import("./_app/immutable/entry/app.DII8k8wZ.js")
+						import("./_app/immutable/entry/start.Dz0IGEI8.js"),
+						import("./_app/immutable/entry/app.fI-QWyJX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
