--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./_app/immutable/assets/2.quDYE5j9.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dz0IGEI8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.qlGGjaRB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D2-EFnQ1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DocIEowV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.D8zZSyqD.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.I66BSs2o.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.fI-QWyJX.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C5ebRF4Z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BOlsE0VD.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BqWNymFP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CV6KsfrR.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.B7Jku0gf.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<!-- App content -->
-		<div style="display: contents">   <div class="container svelte-zuz44l"><input class="entry svelte-zuz44l" type="text" placeholder="Enter a name" value=""> <button class="svelte-zuz44l" data-svelte-h="svelte-1hpsbso">Add Participant</button> <div class="list svelte-zuz44l"></div></div> <div class="container svelte-ouypoh"><select class="svelte-ouypoh"><option disabled selected class="svelte-ouypoh" data-svelte-h="svelte-1m33biw">Select a name</option></select> <select class="svelte-ouypoh"><option disabled selected class="svelte-ouypoh" data-svelte-h="svelte-1m33biw">Select a name</option></select> <button disabled class="svelte-ouypoh">Add Pair</button> <ul class="pair-list svelte-ouypoh"></ul></div> <div class="container svelte-10l3a7n"><button class="styled-button svelte-10l3a7n" data-svelte-h="svelte-sypuq5">Generate assignment</button> </div> <div class="container svelte-1e8p8iz"><a target="_blank" class="link-button encode-button svelte-1e8p8iz" href="http://unknown/?startwith=eyJuYW1lcyI6W10sInNlbGVjdGlvbiI6W10sInBhaXJzIjpbXSwiaGlzdG9yeSI6W119">Current setup</a> </div> 
+		<div style="display: contents">   <div class="container svelte-zuz44l"><input class="entry svelte-zuz44l" type="text" placeholder="Enter a name" value=""> <button class="svelte-zuz44l" data-svelte-h="svelte-1hpsbso">Add Participant</button> <div class="list svelte-zuz44l"></div></div> <div class="container svelte-ouypoh"><select class="svelte-ouypoh"><option disabled selected class="svelte-ouypoh" data-svelte-h="svelte-1m33biw">Select a name</option></select> <select class="svelte-ouypoh"><option disabled selected class="svelte-ouypoh" data-svelte-h="svelte-1m33biw">Select a name</option></select> <button disabled class="svelte-ouypoh">Add Forbidden Pairing</button> <ul class="pair-list svelte-ouypoh"></ul></div> <div class="container svelte-10l3a7n"><button class="styled-button svelte-10l3a7n" data-svelte-h="svelte-d327sd">Generate Assignment</button> </div> <div class="container svelte-1e8p8iz"><a target="_blank" class="link-button encode-button svelte-1e8p8iz" href="http://unknown/?startwith=eyJuYW1lcyI6W10sInNlbGVjdGlvbiI6W10sInBhaXJzIjpbXSwiaGlzdG9yeSI6W119">Current Setup</a> </div> 
 			
 			<script>
 				{
-					__sveltekit_bw0qsy = {
+					__sveltekit_10axic9 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -30,8 +30,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dz0IGEI8.js"),
-						import("./_app/immutable/entry/app.fI-QWyJX.js")
+						import("./_app/immutable/entry/start.D2-EFnQ1.js"),
+						import("./_app/immutable/entry/app.C5ebRF4Z.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
